# offline-speech-analysis

./: .gitignore  CMakeLists.txt  build.sh
src/: eigen.h
src/audio/: audio.h  decode_file.c
src/formant/: bairstow.cc  bairstow.h  cauchy.h  formant.h  lpc.h  resample.h  roots.h  track.cc  viterbi.cc  viterbi.h
src/gui/: gui.h  mainwindow.cc  mainwindow.h  style.cc  style.h  trackview.cc  trackview.h  winmain.cc
src/karma/: ar.cc  cepstrum.cc  jacobian.cc  karma.h  model.cc  state.cc  track.cc
src/main/: main.cc  medianfilter.h  track.h
src/plot/: axis.cc  axis.h  graph.cc  graph.h  series.cc  series.h  transform.cc  transform.h  transform_axis.h  transform_data.h
src/reaper/: compute.cc  compute.h  reaper.h
